--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -88,7 +88,7 @@
     width: 112px;
 }
 .navigation_tab_for6{
-    width: 165px;
+    /*width: 165px;*/
     margin-top: 42px;
 }
 #new_wizardNote_new0{
