--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -210,7 +210,20 @@ li > a:only-child:after { content: ''; }
 /* Media Queries
 --------------------------------------------- */
 
-@media all and (max-width : 768px) {
+@media only screen and (max-width: 768px) {
+  .navbar a {
+    font-size: 9px ! important;
+  }
+  .servicedropdown1{
+    margin-left: 268px ! important;
+  }
+  .servicedropdown{
+    margin-left: 188px !important;
+
+  }
+}
+
+/*@media all and (max-width : 779px) {
 
 #logo {
   display: block;
@@ -286,16 +299,16 @@ nav ul ul li {
 nav ul ul ul li { position: static;
 
 }
-}
+}*/
 
-@media all and (max-width : 330px) {
+/*@media all and (max-width : 330px) {
 
 nav ul li {
   display: block;
   width: 94%;
 }
 
-}
+}*/
 
 .headerlogo img{
   /*margin-top: 15px;*/
