--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -829,8 +829,9 @@ height: 90px;
   .result_hover {
     border: 1px solid #fff;
   }
+
   .resbanner{
-    background-image: url("/images/iogbanner.png");
+    background-image: url("/images/IOG_Banner_crop.png");
     background-size: 100% 100%;
     height: 250px;
     background-repeat: no-repeat;
