--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -46,16 +46,7 @@
   right: 5px;
   display: none;
 }
-/*div {
-  width: 100px;
-  height: 100px;
-  background: red;
-  transition: width 2s;
-}
-div:hover {
-  width: 300px;
-}
-*/
+
 .contactBar:hover i{
   display: none;
   font-size: 50px;
@@ -74,12 +65,7 @@ div:hover {
   font-weight: bolder;
   font-size: 20px;
 }
-.headerflow{
-    position: fixed;
-  z-index: 10000;
-  background-color: transparent;
-  transition-duration: 0.8s;
-}
+
 .headerflowscroll{
   position: fixed;
   z-index: 10000;
@@ -97,673 +83,200 @@ div:hover {
  .toggle, [id^=drop] {
  display: none;
 }
-nav {
-  margin-top: 37px;
-  padding: 0;
-  /*background-color: #254441;*/
-}
 
-#logo {
-  display: block;
-  padding: 0 30px;
+.topnav a {
   float: left;
-  font-size: 20px;
-  line-height: 60px;
-}
-
-nav:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-nav ul {
-  float: left;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: relative;
-}
-
-nav ul li {
-  margin: 0px;
-  display: inline-block;
-  float: left;
-  background-color: transparent;
-  width: auto;
-}
-
-nav a {
   display: block;
-  padding: 0 13px;
-  color: #000;
-  font-size: 15px;
-  line-height: 35px;
-  text-decoration: none;
-  /*text-transform: capitalize;*/
-  font-weight: bold;
-}
-.headerTitle {
-  text-transform: uppercase !important;
-}
-nav ul li ul li:hover { background: #eee; }
-
-nav a:hover { color: #f08f00;
-text-decoration: none; }
-
-nav ul ul {
-  display: none;
-  position: absolute;
-  top: 35px;
-  background-color: #fff;
-  box-shadow: 0 10px 29px rgba(92,141,255,.5);
-  height: 0px;
-
-}
-
-nav ul :hover > ul { display: inherit; }
-
-nav ul ul li {
-  width: auto;
-  float: none;
-  display: list-item;
-  position: relative;
-  background-color: #fff;
-}
-
-nav ul ul ul li {
-  width:312px;
-  position: relative;
-  top: -35px;
-  left: 246px;
-  background-color: #fff;
-}
-nav ul ul ul ul li {
-  width: 300px;
-  position: relative;
-  top: -35px;
-  left: -300px;/*
-  width:360px;
-  position: relative;
-  top: -35px;
-  left: -350px;*/
-  z-index: 100;
-  background-color: #fff;
-}
-nav ul ul ul ul ul li {
-  width: 270px;
-  position: relative;
-  top: -35px;
-  left: -270px;
-  /*width:310px;
-  position: relative;
-  top: -35px;
-  left: -305px;*/
-  background-color: #fff;
-}
-
-/*li > a:after { content: ' +'; }*/
-
-li > a:only-child:after { content: ''; }
-
-
-/* Media Queries
---------------------------------------------- */
-
-@media only screen and (max-width: 768px) {
-  .navbar a {
-    font-size: 9px ! important;
-  }
-  .servicedropdown1{
-    margin-left: 268px ! important;
-  }
-  .servicedropdown{
-    margin-left: 188px !important;
-
-  }
-}
-
-/*@media all and (max-width : 779px) {
-
-#logo {
-  display: block;
-  padding: 0;
-  width: 100%;
+  color: #333;
   text-align: center;
-  float: none;
-}
-
-nav { margin: 0; }
-
-.toggle + a,
- .menu { display: none; }
-
-.toggle {
-  display: block;
-  background-color: #254441;
-  padding: 0 60px;
-  color: #eee;
-  font-size: 22px;
-  font-weight:bold;
-  line-height: 60px;
+  padding: 14px 7px;
   text-decoration: none;
-  border: none;
-}
-.toggle1 {
-      display: block;
-    background-color: #254441;
-    padding: 7px 5px;
-    color: #ffffff ! important;
-    font-size: 22px;
-    font-weight: bold;
-    line-height: 17px;
-    text-decoration: none;
-    border: none;
-    height: 43px;
+  font-size: 13px;
+  font-weight: 700;
 }
 
-.toggle:hover { background-color: #000000; }
-
-[id^=drop]:checked + ul { display: block; }
-
-nav ul li {
-  display: block;
-  width: 100%;
+.active {
+  /*background-color: #4CAF50;*/
+  color: #f08f00;
 }
 
-nav ul ul .toggle,
- nav ul ul a { padding: 0 40px; }
-
-nav ul ul ul a { padding: 0 80px; }
-
-nav a:hover,
- nav ul ul ul a { background-color: #000000; }
-
-nav ul li ul li .toggle,
- nav ul ul a { background-color: #212121; }
-
-nav ul ul {
-  float: none;
-  position: static;
-  color: #eee;
-}
-
-nav ul ul li:hover > ul,
-nav ul li:hover > ul { display: none; }
-
-nav ul ul li {
-  display: block;
-  width: ;
-}
-
-nav ul ul ul li { position: static;
-
-}
-}*/
-
-/*@media all and (max-width : 330px) {
-
-nav ul li {
-  display: block;
-  width: 94%;
-}
-
-}*/
-
-.headerlogo img{
-  /*margin-top: 15px;*/
-  height: 75px;
-}
-
-.zindex{
-
-}
-/*#drop-5{
-  z-index: 100;
-}
-#drop-6{
-  z-index: 100;
-}
-#drop-7{
-  z-index: 100;
-}
-#drop-8{
-  z-index: 100;
-}
-#drop-9{
-  z-index: 100;
-}
-#drop-10{
-  z-index: 10;
-}
-*/
-
-dropdown-submenu {
-  position: relative;
-}
-dropdown1-submenu {
-  position: relative;
-}
-
-.dropdown-submenu a::after {
-  transform: rotate(-90deg);
-  position: absolute;
-  right: 6px;
-  top: .8em;
-}
-.dropdown1-submenu a::after {
-  transform: rotate(-90deg);
-  position: absolute;
-  right: 6px;
-  top: .8em;
-}
-
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-left: .1rem;
-  margin-right: .1rem;
-}
-.dropdown1-submenu .dropdown1-menu {
-  top: 0;
-  left: 100%;
-  margin-left: .1rem;
-  margin-right: .1rem;
-}
-.geoHover:hover~ul>li{
-  z-index: 300;
-}
-
-
-/*Mega menu css*/
-
-dropdown-submenu {
-  position: relative;
-}
-
-.dropdown-submenu a::after {
-  transform: rotate(-90deg);
-  position: absolute;
-  right: 6px;
-  top: .8em;
-}
-
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-left: .1rem;
-  margin-right: .1rem;
-}
-.geoHover:hover~ul>li{
-  z-index: 300;
-}
-
-/*Mega menu css*/
-.navbar {
-  background-color: transparent;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 14px;
-}
-.navbar a {
-    /*float: left;*/
-    display: block;
-    padding: 0 7px;
-    color: #000;
-    font-size: 13px;
-    line-height: 23px;
-    text-decoration: none;
-    /*text-transform: capitalize;*/
-    /*font-weight: 700;*/
-}
-.navbarNewa{
-  float: left;
+.topnav .icon {
+  display: none;
 }
 
 .dropdown {
   float: left;
   overflow: hidden;
-  /*width: 127px;*/
-  /*margin-top:12px; */
 }
 
 .dropdown .dropbtn {
-  display: block;
-  font-weight: 700 ! important;
-  color: #000;
-  font-size: 16px;  
+  font-size: 13px;    
   border: none;
   outline: none;
-  line-height: 35px;
-  padding: 0px 10px;
+  color: #333;
+  padding: 14px 7px;
   background-color: inherit;
-  font: inherit;
+  font-family: inherit;
   margin: 0;
-}
-.dropdown1 .dropbtn {
-  display: block;
-  font-weight: 700 ! important;
-  color: #000;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  /*line-height: 35px;*/
-  padding: 0px 10px;
-  background-color: inherit;
-  font: inherit;
-  margin: 0;
-}
-.dropbtn1 {
-  display: block;
-  font-weight: 700 ! important;
-  color: #000;
-  font-size: 15px;  
-  border: none;
-  outline: none;
-  line-height: 35px;
-  padding: 0px 16px;
-  background-color: inherit;
-  font: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  /*background-color: red;*/
-}
-
-.dropdown-content {
-  display: none;
-  position: fixed;
-  background-color: #fff ! important;
-  width: 95%;
-  left: 0;
-  z-index: 999;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  /*padding-top: 20px;*/
-  margin-top: 10px;
-  border-radius: 5px;
-  border-top: 3px solid #aaf;
-}
-
-
-.dropdown-content .header {
-  background: red;
-  padding: 16px;
-  color: white;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block ! important;
-}
-.dropdown1:hover .dropdown-content {
-  display: block ! important;
-}
-.dropdown1:hover .menudivider {
-  display: block ! important;
-}
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
-  background-color:#fff;
-  height: 430px;
-  padding:0px;
-}
-/*.columnmenu1{
-  width:13%;
-}*/
-.columnmenu2{
-  background-color: #FAFAFA;
-}
-.menuitem{
   font-weight: 700;
 }
 
-.column a {
+.dropdown-content {
+  border-top: 3px solid #aaf;
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 5px;
+}
+.normaldropdown a{
+  font-weight: 700 ! important;
+}
+
+.dropdown-content a {
   float: none;
-  color: #666666;
-  padding: 16px;
+  /*color: black;*/
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
-  /*font-weight: 700;*/
+  font-size: 12px;
+  font-weight: normal;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  /*background-color: #555;*/
+  color: #f08f00;
+}
+
+.dropdown-content a:hover {
+  /*background-color: #ddd;*/
+  color: #5e8c31;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    top: 23px;
+    position: absolute;
+    float: right;
+    right: -5px;
+    display: block;
+    background: #fff;
+    border-radius: 4px;
+    font-size: 14px;
+    width: 32px;
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+ 
+  .topnav a {
+   
+    padding: 14px 3px;
+    text-decoration: none;
+    font-size: 9px;
+    font-weight: 700;
+}
+.dropdown .dropbtn {
+    font-size: 9px;
+    padding: 14px 3px;
+    
+}
+.headerlogo img{
+  height: 68px ! important;
+
+}
+.expertiesdropdown{
+  margin-left: -276px ! important;
+}
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+    background-color: #fff;
+    top: 42px;
+    left: 29px;
+   }
+  .topnav.responsive .icon {
+    position: absolute;
+    color:#f19000;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: right;
+    
+  }
+  .topnav.responsive .dropdown-content{
+    left: 233px ! important;
+    top: 78px ! important;
+
+  }
+}
+.headerflow{
+  position: fixed;
+  z-index: 10000;
+  background-color: transparent;
+  transition-duration: 0.8s;
+}
+.headerlogo img{
+  /*margin-top: 15px;*/
+  height: 75px;
+}
+.headerflowscroll{
+  position: fixed;
+  z-index: 10000;
+  background-color: #fff;
+  height: 120px;
+  box-shadow: 0 10px 14px rgba(92,141,255,.2);
+  transition-duration: 0.8s;
+}
+.expertiesdropdown{
+    width: 1277px;
+    margin-left: -550px;
 }
 .columnhead{
   /*line-height: 20px;*/
   font-weight: 900 ! important;
-  font-size: 17px ! important;
+  font-size: 12px ! important;
   text-align: center;
   color: #333 ! important;
 }
-.column a:hover {
-  color: #5e8c31;
+.columnhead a:hover{
+  color:#5e8c31 ! important;
 }
-
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    height: auto;
-  }
-}
-/*.column6{
-  width: 12.01%;
-}*/
-.takenavdown{
-  margin-top: 25px;
-  padding:0px;
-}
-.downarrow1{
-  padding-left: 5px;
-  padding-top: 3px;
-
-}
-
-.dropbtn:hover .downarrow1 {
-  transition: 0.5s;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
-} 
-.columnmenu a{
-  font-size:12px ! important;
-}
-.navbar1 li>a{
-  font-size: 16px;
-  padding:0px;
-  line-height: 0px ! important;
-  color:#ffffff ! important;
-}
-.menudivider{
-  height: 20px;
-   display: none;
-}
-.servicestab{
-  font-weight: 700;
-
-
-}
-.servicedropdown1{
-  width: 140px;
-  height: 179px;
-  margin-left: 497px;
-
-}
-.servicedropdown1 a{
-  text-align: center;
-  /*padding-left: 54px ! important;*/
-  font-weight: normal;
-  line-height: 31px;
-}
-.servicedropdown1 a:hover{
-  color:#5e8c31;
-}
-.columnhead1{
-  padding-left: 20px;
-}
-.servicedropdown{
-  height: 168px;
-  width: 150px;
-  /*padding-left: 20px ! important;*/
-  border-radius: 5px;
-  border-top: 3px solid #66f;
-  margin-left: 391px;
-}
-.servicedropdown2{
-  height: 232px;
-  width: 150px;
-  border-radius: 5px;
-  border-top: 3px solid #66f;
-  margin-top: 0px;
-  margin-left: 677px;
-}
-.servicedropdown2_pos{
-  padding-bottom: 20px;
-
-}
-.Servicecolumn{
-  width:150px;
-}
-.Servicecolumn a{
-  width: 200px;
-  line-height: 35px;
-  text-align: center;
-  /*padding-left: 36px;*/
-  font-weight: 700;
-}
-
-.Servicecolumn a:hover {
-  color:#5e8c31;
-}
-.abootusdrop{
-  height: 200px;
-  text-align: left;
-}
-.aboutusdrop a{
-  /*padding-left: 15px;*/
-}
-.expertcontrnt{
-  margin-left: 34px;
-  padding-left: 65px;
-
-}
-.expertcontrnt a{
-  font-weight: normal;
-  text-align: left;
-  font-size: 10px;
-  line-height: 0px ! important;
-}
-.navbar-header{
-  padding-top: 10px;
-}
-.NOPadding{
-  padding: 0;
-}
-.dropdown1 {
-  /*margin-top: 12px;*/
-  float: left;
-  overflow: hidden;
-  /*width: 108px;*/
-}
-.columnhealth{
-  width: 11%;
-}
-.Servicecolumn a{
-  text-align: left;
-}
-.customNavBar{
-  background-color: transparent ! important;
-}
-.dropdownresponsive{
-  width: 348px ! important;
-  background-color: #ffffff;
-}
-#navbarDropdownMenuLink{
+.columnheadsub{
   font-size: 12px;
-  background: #ffffff ! important;
-    /* color: #000; */
-    color: #333 ! important;
 }
-.dropdownresponsive li{
-  width:300px ! important;
-
-}
-.dropdownresponsive a{
-  background-color: #777 ! important;
-  color:#fff ! important;
-  border: none ! important;
-}
-.responsiveNavBar{
-  width:348px !important;
-  /*margin-left: 25px ! important;*/
-}
-.customDropdown a{
-  background-color: #FAFAFA! important;
-  width:348px;
-  font-size: 12px ! important;
-  color:#333 ! important;
-}
-.resmenubar{
-  float: left ! important;
-  background-color: #333 ! important;
-}
-.icon-bar{
-  background-color: #ffffff;
-}
-.responsivetoggle{
-  background-color: #333;
-  margin-right: 0px ! important;
-  margin-top: 21px;
-}
-/*.Servicecolumn{
+.column {
   float: left;
-    width: 100%;
-    padding: 10px;
-    background-color: #fff;
-    height: 500px;
-}*/
-
-
-.blockContent{
-  text-align: justify;
+  /*width: 25%;*/
+  padding: 10px;
+  background-color:#fff;
+  /*height: 430px;*/
+  padding:0px;
 }
 
-.dataneeded a{
-  color: #f00 ! important;
-}
-.dataneeded{
-  color: #f00 ! important;
 
-}
-.responsiveMenubar{
-  background-color: #333;
-  height: 500px;
-}
-#navbar{
-  border: 1px solid #333;
-  height: 300px;
-}
-.responsiveMenubar-nav>ul>li>a{
-  color: #ffffff ! important;
-  z-index:999 ! important;
-}
-.navbar1-nav>ul>li>a{
-  color: #ffffff;
-}
-.customDropdown a{
-  text-align: right;
-}
-.columnmenu3{
-  width: 24% ! important;
-}
+
+
+
