--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -947,7 +947,7 @@ height: 90px;
   right: 493px;
   top: 232px;
   height: 221px;
-  opacity: 0.8;
+  opacity: 1;
 
 }
 .plantimage11{
@@ -963,9 +963,9 @@ height: 90px;
   position: absolute;
   bottom: 0px;
   left: 65px;
-  top: 224px;
+  top: 258px;
   height: 221px;
-  opacity:0.7;
+  opacity:1;
 }
 .boat_img{
   position: absolute;
@@ -973,6 +973,7 @@ height: 90px;
   left: 221px;
   top: 127px;
   height: 221px;
+  opacity:1;
 
 }
 .boat_img2{
@@ -981,7 +982,7 @@ height: 90px;
   left: 297px;
   top: 320px;
   height: 221px;
-  opacity: 0.7
+  opacity: 1;
 
 }
 .waterimg2{
@@ -994,26 +995,60 @@ height: 90px;
 }
 .new_HoverDiv {
     display: none;
-    height: 250px;
+    height: 255px;
     width: 250px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
+    /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -41px;
     margin-top: -175px;
     position: absolute;
     background-size: 100% 100%;
+    opacity:1;
+  }
+
+.new_HoverDiv  img {
     
-}.waterimg:hover{
-  opacity: 1;
+       -webkit-animation: rotation 45s infinite linear;
 }
+.new_HoverDiv1  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
+.new_HoverDiv3  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
+.rotate {
+  animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(150deg);
+  }
+}
+
+  #blackbackground{
+    display: none;
+    background-color:#21252999;
+    width: 1353px;
+    height: 810px;
+  }
+    
+/*}.waterimg:hover{
+  opacity: 1;
+}*/
 .petrolimage1:hover{
   opacity: 1;
 }
-.waterimg:hover .new_HoverDiv  {
+/*.waterimg:hover .new_HoverDiv  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
+}*/
 .boat_img2:hover .  {
       opacity: 1;
 }
@@ -1042,7 +1077,7 @@ height: 90px;
     height: 240px;
     width: 250px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
+    /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: 28px;
     margin-top: -128px;
     position: absolute;
@@ -1078,11 +1113,12 @@ height: 90px;
     height: 267px;
     width: 274px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
+    /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -26px;
     margin-top: -130px;
     position: absolute;
     background-size: 100% 100%;
+    opacity: 1;
     
 }
 .new_HoverDiv4 {
@@ -1126,16 +1162,16 @@ height: 90px;
       cursor: pointer;
       opacity: 1;
 }
-.boat_img2:hover .new_HoverDiv1  {
+/*.boat_img2:hover .new_HoverDiv1  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
-.plantimage1:hover .new_HoverDiv3  {
+}*/
+/*.plantimage1:hover .new_HoverDiv3  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
+}*/
 .nexttogasimage:hover .new_HoverDiv5 {
       display: block ! important;
       cursor: pointer;
@@ -1190,11 +1226,13 @@ height: 90px;
     text-align: center;
 }
 .newhovertxt_1{
-  margin-top: 78px;
+  margin-top: -173px;
   margin-left: 62px;
   font-size: 11px;
   padding-left: 10px;
   text-align: center;
+  position: fixed;
+  width: 101px;
 }
 .newhovertxt_4{
     margin-top: 77px;
@@ -1211,19 +1249,23 @@ height: 90px;
   text-align: center;
 }
 .newhovertxt_e_p{
-  margin-top: 67px;
+  margin-top: -176px;
   margin-left: 49px;
   font-size: 11px;
   padding-left: 10px;
   text-align: center;
+  position: absolute;
+  width: 123px;
 
 }
 .newhovertxt_ptrchemical{
-    margin-top: 81px;
-    margin-left: 67px;
+    margin-top: -184px;
+    margin-left: 72px;
     font-size: 11px;
     padding-left: 10px;
     text-align: center;
+    position: absolute;
+    width: 111px;
 }
 .servicekbtnarrow1{
     margin-left: 107px;
@@ -1242,21 +1284,21 @@ height: 90px;
 .servicekbtnarrow3 {
     margin-left: 108px;
     color: #000;
-    margin-top: -9px;
+    margin-top: -88px;
     font-size: 13px;
     position: absolute;
 }
 .servicekbtnarrow4 {
-    margin-left: 108px;
+    margin-left: 113px;
     color: #000;
-    margin-top: -7px;
+    margin-top: -98px;
     font-size: 13px;
     position: absolute;
 }
 .servicekbtnarrow5 {
-    margin-left: 119px;
+    margin-left: 139px;
     color: #000;
-    margin-top: -10px;
+    margin-top: -105px;
     font-size: 13px;
     position: absolute;
 }
@@ -1274,6 +1316,161 @@ height: 90px;
     font-size: 13px;
     position: absolute;
 }
+@mixin rings($duration, $delay) {
+    opacity: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: -8px;
+    left: -8px;
+    right: 0;
+    bottom: 0;
+    content: '';
+    height: 100%;
+    width: 100%;
+    border: 8px solid rgba(0,0,0,0.2);
+    border-radius: 100%;
+    animation-name: ripple;
+    animation-duration: $duration;
+    animation-delay: $delay;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(.65,0,.34,1);
+    z-index: -1;
+}
+
+.request-loader {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  background: #FFFFFF;
+  box-shadow: 0 0 20px 0 rgba(0,0,0,0.25);
+  
+  span {
+    position: relative;
+    font-size: 72px;
+    top: 5px;
+    left: -5px;
+  }
+  
+  &::after {
+    @include rings(3s, 0s);
+  }
+  
+  &::before {
+    @include rings(3s, 0.5s);
+  }
+}
+
+
+@keyframes ripple {
+  from {
+    opacity: 1;
+    transform: scale3d(0.75,0.75,1);
+  }
+  
+  to {
+    opacity: 0;
+    transform: scale3d(1.5,1.5,1);
+  }
+}
+.ripplebox:hover{
+  cursor: pointer;
+}
+.ripplebox1:hover{
+  cursor: pointer;
+}.ripplebox2:hover{
+  cursor: pointer;
+}
+
+.ripplebox{
+  width:40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 51px;
+  top: -24px;
+
+}
+.ripplebox1 {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 121px;
+    top: 24px;
+  }
+  .ripplebox2 {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 95px;
+    top: -18px;
+  }
+.ripplebox span{
+  position: absolute;
+  box-sizing: border-box;
+  background:rgba(255,140,0,0.50); 
+  /*border:2px solid rgb(255,69,0);*/
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-delay: calc(-1.5s * var(--i));
+}
+.ripplebox1 span{
+  position: absolute;
+  box-sizing: border-box;
+  background:rgba(255,140,0,0.50); 
+  /*border:2px solid rgb(255,69,0);*/
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-delay: calc(-1.5s * var(--i));
+}
+.ripplebox2 span{
+  position: absolute;
+  box-sizing: border-box;
+  background:rgba(255,140,0,0.50); 
+  /*border:2px solid rgb(255,69,0);*/
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-delay: calc(-1.5s * var(--i));
+}
+@keyframes animate{
+  0%{
+    width: 0px;
+    height: 0px;
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    width:40px;
+    height: 40px;
+  }
+}
+.hover_close{position: absolute;
+    top: 27px;
+    left: 183px;
+    background-color: #fff;
+    border-radius: 15px;
+    width: 19px;
+    height: 19px;
+    padding-top: 2px;
+    padding-left: 3px;
+  }
+
 
 
 
