Karuna added changes

--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -25,6 +25,23 @@
   z-index: 100000;
   top:70px;
 }
+.contactBarres{
+  position: absolute;
+  right: 0px;
+  background-color: #f19000;
+  width: 35px;
+  height: 30px;
+  color: #fff;
+  padding: 6px 8px 6px 6px ;
+  border-radius: 3px;
+  text-align: right;
+  cursor: pointer;
+  transition-duration: 0.7s;
+  transition: width 1s;
+  border: none;
+  z-index: 100000;
+  top:30px;
+}
 .navbar-static-top{
   padding-top: 20px;
 }
@@ -56,10 +73,24 @@
   display: none;
   font-size: 50px;
 }
+.contactBarres:hover i{
+  display: none;
+  font-size: 50px;
+}
 .contactBar:hover{
   width: 130px;
 }
+.contactBarres:hover{
+  width: 130px;
+}
 .contactBar:hover .hovertext{
+  display: block;
+  cursor: pointer;
+  text-align: right;
+  font-weight: bold;
+  white-space: nowrap;
+}
+.contactBarres:hover .hovertext{
   display: block;
   cursor: pointer;
   text-align: right;
