Karuna added changes

--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -30,7 +30,8 @@
     /*background-color: #fff;*/
     /*box-shadow: 0 10px 29px rgba(92,141,255,.22);*/
     margin-bottom: 50px;
-    height: 300px; 
+    height: 300px;
+    width:300px; 
      perspective: 1000px;
     border-radius: 15px;
 }
@@ -78,7 +79,8 @@
 }
 
 .serflip-card-back p{
-  letter-spacing: 0.5px;
+  letter-spacing: 0px;
+  font-size: 13px;
 }
 .downstreamservicesblock{
 	  background-color: #fff;
