--- a/ui/website/src/allBlocks/Banner/BannerClick.css
+++ b/ui/website/src/allBlocks/Banner/BannerClick.css
@@ -19,7 +19,6 @@
     /*height: 500px;*/
 }.bannerContainer1{
   opacity: 1;
-  z-index: 110;
   /*height: 500px;*/
   background-size: 100% 100% ;
     width: 100%;
@@ -469,7 +468,7 @@ height: 90px;
   }
   100% {
    margin-top:120px ;
-    opacity: 1;
+   opacity: 1;
   }
   
 }
@@ -1011,8 +1010,7 @@ height: 90px;
   left: 65px;
   top: 258px;
   height: 221px;
-  /*opacity:1;*/
-  z-index: 110;
+  opacity:1;
 }
 .boat_img{
   position: absolute;
@@ -1020,8 +1018,7 @@ height: 90px;
   left: 221px;
   top: 127px;
   height: 221px;
-  z-index: 110;
-  /*opacity:1;*/
+  opacity:1;
 
 }
 .boat_img2{
@@ -1030,8 +1027,7 @@ height: 90px;
   left: 297px;
   top: 320px;
   height: 221px;
-  z-index: 110;
-  /*opacity: 1;*/
+  opacity: 1;
 
 }
 .waterimg2{
@@ -1039,12 +1035,11 @@ height: 90px;
   top: 77%;
   left: 13%;
   height: 221px;
-  z-index: 110;
-  /*opacity: 0.9;*/
+  opacity: 0.9;
 
 }
 .new_HoverDiv {
-    display: none;
+    /*display: none;*/
     height: 255px;
     width: 250px;
     border-radius: 5px;
@@ -1100,44 +1095,39 @@ height: 90px;
     height: 810px;
   }
     
-.waterimg:hover{
-  z-index: 110;
-  /*opacity: 1;*/
-}
+/*}.waterimg:hover{
+  opacity: 1;
+}*/
 .petrolimage1:hover{
   opacity: 1;
 }
-.waterimg:hover .new_HoverDiv {
+/*.waterimg:hover .new_HoverDiv  {
       display: block ! important;
       cursor: pointer;
-      z-index: 110;
-}
-
+      opacity: 1;
+}*/
 .boat_img2:hover .  {
-      z-index: 110;
+      opacity: 1;
 }
 
 .plantimage1fv:hover  {
-     z-index: 110;
+      opacity: 1;
 }
 .nexttogasimage:hover{
-  z-index: 110;
+  opacity: 1;
 
 }
 .oilimage:hover{
-  z-index: 110;
+  opacity: 1;
 
 }
 .waterimg2:hover{
-  z-index: 110;
+  opacity: 1;
 
-}
-.hiddendiv {
-  visibility: hidden ! important;
 }
 
 .plantimage11:hover  {
-     z-index: 110;
+      opacity: 1;
 
 }
 .new_HoverDiv1 {
@@ -1234,39 +1224,41 @@ height: 90px;
       cursor: pointer;
       opacity: 1;
 }
-.boat_img2:hover .new_HoverDiv1  {
+/*.boat_img2:hover .new_HoverDiv1  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
-.plantimage1:hover .new_HoverDiv3  {
+}*/
+/*.plantimage1:hover .new_HoverDiv3  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
-.nexttogasimage:hover .new_HoverDiv5 {
+}*/
+/*.nexttogasimage:hover .new_HoverDiv5 {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
-.plantimage11:hover .new_HoverDiv4  {
+}*/
+/*.plantimage11:hover .new_HoverDiv4  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
+}*/
 .petrolimage1:hover .new_HoverDiv2{
    display: block ! important;
    cursor: pointer;
   opacity: 1;
 
 }
-.waterimg2:hover .new_HoverDiv6{
+/*.waterimg2:hover .new_HoverDiv6{
    display: block ! important;
    cursor: pointer;
    opacity: 1;
 
+}*/
+.waterimg:hover .bannerContainer1{
+  opacity: 0.7;
 }
-
 .onhoverimages{
   opacity: 0.7;
 
@@ -1300,7 +1292,7 @@ height: 90px;
     position: absolute;
 }
 .newhovertxt_1{
-  margin-top: -181px;
+  margin-top: -173px;
   margin-left: 62px;
   font-size: 11px;
   padding-left: 10px;
@@ -1648,13 +1640,13 @@ svg {
     margin-left: 100px;
 
 }
-#blackbannerDiv{
-  background:transparent;
+.banner-cover{
+  background-color: #0f0f0f;
   position: absolute;
   height: 43em;
-  /*opacity: 0.6;*/
-  /*display: none;*/
-  z-index: -1;
+  opacity: 0.6;
+  display: none;
+  z-index: 10;
 }
 .circle_wrapper {
   border-top-left-radius: 500px;
