--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -19,7 +19,7 @@
     /*height: 500px;*/
 }.bannerContainer1{
   opacity: 1;
-  z-index: 110;
+  /*z-index: 110;*/
   /*height: 500px;*/
   background-size: 100% 100% ;
     width: 100%;
@@ -855,7 +855,7 @@ height: 90px;
   right: 71px;
   top: 100px;
   height: 168px;
-  opacity: 0.9;
+  /*opacity: 0.9;*/
 }
 @media only screen (min-width: 1920px) {
   .bannerContainer1{
@@ -969,7 +969,7 @@ height: 90px;
   right: 562px;
   top: 449px;
   height: 168px;
-  opacity: 0.9;
+  /*opacity: 0.9;*/
 }
 .petrolimage{
   position: absolute;
@@ -1012,7 +1012,13 @@ height: 90px;
   top: 258px;
   height: 221px;
   /*opacity:1;*/
-  z-index: 110;
+  /*z-index: 110;*/
+}
+.waterimg:hover{
+  z-index: 120;
+}
+.boat_img2:hover{
+  z-index: 120;
 }
 .boat_img{
   position: absolute;
@@ -1020,7 +1026,7 @@ height: 90px;
   left: 221px;
   top: 127px;
   height: 221px;
-  z-index: 110;
+  /*z-index: 110;*/
   /*opacity:1;*/
 
 }
@@ -1030,7 +1036,7 @@ height: 90px;
   left: 297px;
   top: 320px;
   height: 221px;
-  z-index: 110;
+  /*z-index: 110;*/
   /*opacity: 1;*/
 
 }
@@ -1039,7 +1045,7 @@ height: 90px;
   top: 77%;
   left: 13%;
   height: 221px;
-  z-index: 110;
+  /*z-index: 110;*/
   /*opacity: 0.9;*/
 
 }
@@ -1100,17 +1106,15 @@ height: 90px;
     height: 810px;
   }
     
-.waterimg:hover{
+
+.petrolimage1:hover{
   z-index: 110;
   /*opacity: 1;*/
-}
-.petrolimage1:hover{
-  opacity: 1;
 }
 .waterimg:hover .new_HoverDiv {
       display: block ! important;
       cursor: pointer;
-      z-index: 110;
+      z-index: 140;
 }
 
 .boat_img2:hover .  {
@@ -1239,11 +1243,11 @@ height: 90px;
       cursor: pointer;
       opacity: 1;
 }
-.plantimage1:hover .new_HoverDiv3  {
+/*.plantimage1:hover .new_HoverDiv3  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
+}*/
 .nexttogasimage:hover .new_HoverDiv5 {
       display: block ! important;
       cursor: pointer;
@@ -1649,12 +1653,22 @@ svg {
 
 }
 #blackbannerDiv{
-  background:transparent;
+  background:#0f0f0fbf;
+  /* box-shadow: inset 0 0 0 0 #0f0f0fbf;
+  -webkit-transition: all ease 0.8s;
+  -moz-transition: all ease 0.8s;
+  transition: all ease 0.8s;*/
+  /*background: linear-gradient(to right, black 50%, #0f0f0fbf);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 5s ease-out;*/
   position: absolute;
+ -webkit-animation: blackbannerDiv 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+          animation: blackbannerDiv 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   height: 43em;
   /*opacity: 0.6;*/
   /*display: none;*/
-  z-index: -1;
+  z-index: 50;
 }
 .circle_wrapper {
   border-top-left-radius: 500px;
@@ -1758,9 +1772,6 @@ svg {
    height: 90px;
    width: 200px;
 }
-
-
-
 
 .chart-skills {
   margin: 0 auto;
@@ -2013,4 +2024,33 @@ svg {
         -webkit-transform: rotate(180deg);
     }
 }
+@-webkit-keyframes blackbannerDiv {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    -webkit-transform-origin: 0% 0%;
+            transform-origin: 0% 0%;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 0% 0%;
+            transform-origin: 0% 0%;
+  }
+}
+@keyframes blackbannerDiv {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    -webkit-transform-origin: 0% 0%;
+            transform-origin: 0% 0%;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 0% 0%;
+            transform-origin: 0% 0%;
+  }
+}
+
 
