--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -1072,6 +1072,10 @@ height: 90px;
     
        -webkit-animation: rotation 45s infinite linear;
 }
+.new_HoverDiv2  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
 .new_HoverDiv3  img {
     
        -webkit-animation: rotation 45s infinite linear;
@@ -1085,6 +1089,10 @@ height: 90px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv6  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
+.new_HoverDiv7  img {
     
        -webkit-animation: rotation 45s infinite linear;
 }
@@ -1127,7 +1135,7 @@ height: 90px;
      z-index: 110;
 }
 .nexttogasimage:hover{
-  z-index: 110;
+  /*z-index: 110;*/
 
 }
 .oilimage:hover{
@@ -1176,7 +1184,7 @@ height: 90px;
     height: 240px;
     width: 248px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
+    /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: 6px;
     margin-top: -101px;
     position: absolute;
@@ -1226,9 +1234,9 @@ height: 90px;
 .new_HoverDiv7 {
     display: none;
     height: 274px;
-    width: 260px;
+    width: 281px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
+    /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: 16px;
     margin-top: -128px;
     position: absolute;
@@ -1281,11 +1289,21 @@ height: 90px;
   opacity: 0.3;
 }
 .newhovertxt{
-  margin-top: 86px;
-  margin-left: 54px;
-  font-size: 11px;
-  padding-left: 10px;
-  text-align: center;
+    margin-top: -201px;
+    margin-left: 86px;
+    font-size: 11px;
+    padding-left: 10px;
+    text-align: center;
+    position: absolute;
+    width: 105px;
+}
+.newhovertxt_again{
+    top: 81px;
+    position: absolute;
+    width: 90px;
+    left: 75px;
+    text-align: center;
+    font-size: 12px;
 }
 .newhovertxt_6{
   margin-top: -153px;
@@ -1350,9 +1368,9 @@ height: 90px;
     width: 111px;
 }
 .servicekbtnarrow1{
-    margin-left: 107px;
+   margin-left: 114px;
     color: #000;
-    margin-top: -1px;
+    margin-top: -105px;
     font-size: 13px;
     position: absolute;
 }
@@ -1385,9 +1403,9 @@ height: 90px;
     position: absolute;
 }
 .servicekbtnarrow7{
-    margin-left: 113px;
+    margin-left: 126px;
     color: #000;
-    margin-top: -8px;
+    margin-top: -106px;
     font-size: 13px;
     position: absolute;
 }
@@ -1656,20 +1674,9 @@ svg {
 }
 #blackbannerDiv{
   background:#0f0f0fbf;
-  /* box-shadow: inset 0 0 0 0 #0f0f0fbf;
-  -webkit-transition: all ease 0.8s;
-  -moz-transition: all ease 0.8s;
-  transition: all ease 0.8s;*/
-  /*background: linear-gradient(to right, black 50%, #0f0f0fbf);
-  background-size: 200% 100%;
-  background-position: right bottom;
-  transition: all 5s ease-out;*/
   position: absolute;
- /*-webkit-animation: blackbannerDiv 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;*/
-          animation: blackbannerDiv 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: dripple1 1s ease-out 1s;
   height: 43em;
-  /*opacity: 0.6;*/
-  /*display: none;*/
   z-index: 50;
 }
 .circle_wrapper {
@@ -2054,5 +2061,113 @@ svg {
             transform-origin: 0% 0%;
   }
 }
+div.drop-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  height: 200px;
+  width: 200px;
+}
+
+
+div.drop {
+  position: absolute;
+  top: -25%;
+  width: 20%;
+  height: 20%;
+  border-radius: 100% 5% 100% 100%;
+  transform: rotate(-45deg);
+  margin: 0px;
+  background: transparent;
+  animation: drip 4s linear;
+}
+
+h1 {
+  color: white;
+  position: absolute;
+  font-size: 2.5em;
+  height: 1em;
+  top: 0; left: 0; right: 0; bottom: 0;
+  z-index: 2;
+  margin: auto;
+  text-align: center;
+  opacity: 0;
+  animation: appear 2s 2.5s forwards;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    z-index: 10;
+  }
+}
+
+div.drop-container:before,
+div.drop-container:after {
+  content: '';
+  position: absolute;
+  z-index: 221;
+  top: 24%;
+  right: 133%;
+  transform: translate(50%) rotateX(100deg);
+  border-radius: 100%;
+  opacity: 0;
+  width: 130%;
+  height: 43%;
+  border: 5px solid skyblue;
+  animation: dripple 10s ease-out 1s;
+}
+
+div.drop-container:after {
+  animation: dripple 2s ease-out 1.7s;
+}
+
+@keyframes drip {
+  45% {
+    top: 0;
+    border-radius: 100% 5% 100% 100%;
+    transform: rotate(-45deg);
+  }
+  100% {
+    top: 0;
+    transform: rotate(0deg);
+    border-radius: 100%;
+  }
+}
+
+@keyframes dripple {
+  0% {
+    width: 150px;
+    height: 150px;
+  }
+  25% {
+    opacity: 1;
+  }
+  100% {
+    width: 500px;
+    height: 500px;
+    top: -20%;
+    /*opacity: 0;*/
+  }
+}
+@keyframes dripple1 {
+  0% {
+    width: 5%;
+    height: 5%;
+  }
+  
+  100% {
+    width: 100%;
+    height: 100%;
+    /*top: -20%;*/
+    /*opacity: 0;*/
+  }
+}
+
 
 
