--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -24,7 +24,7 @@
   background-size: 100% 100% ;
     width: 100%;
   /*  margin-right: auto;*/
-    height: 43em;
+    height: 53em;
   /*  margin-left: auto;*/
     /*float: left;*/
     background-image: url(/images/Banner3_.png);
@@ -974,7 +974,7 @@ height: 90px;
   top: 449px;
   /*z-index: 110;*/
   height: 168px;
-  z-index: 5;
+  /*z-index: 5;*/
   /*opacity: 0.9;*/
 }
 .petrolimage{
@@ -1024,6 +1024,7 @@ height: 90px;
   top: 258px;
   height: 221px;
   animation: slide-right 4s ease-out;
+  
   /*opacity:1;*/
   /*z-index: 110;*/
 }
@@ -1281,11 +1282,15 @@ height: 90px;
       cursor: pointer;
       opacity: 1;
 }*/
-/*.nexttogasimage:hover .new_HoverDiv5 {
+.nexttogasimage:hover .new_HoverDiv5 {
       display: block ! important;
       cursor: pointer;
-      opacity: 1;
-}*/
+      z-index: 120;
+      /*opacity: 1;*/
+}
+.nexttogasimage:hover{
+  z-index: 120;
+}
 .plantimage11:hover .new_HoverDiv4  {
       display: block ! important;
       cursor: pointer;
@@ -1699,7 +1704,7 @@ svg {
   background:#0f0f0fbf;
   position: absolute;
   animation: dripple1 1s ease-out 1s;
-  height: 43em;
+  height: 53em;
   z-index: 50;
 }
 .circle_wrapper {
